--- a/INTRODUCCIÓN .NET Y C#/MVCCRUDAlumnos/Presentacion/Views/Alumno/Details.cshtml
+++ b/INTRODUCCIÓN .NET Y C#/MVCCRUDAlumnos/Presentacion/Views/Alumno/Details.cshtml
@@ -15,7 +15,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.idAlumnos)
+            <span id="idAlumno">@Html.DisplayFor(model => model.idAlumnos)</span>
         </dd>
 
         <dt>
@@ -100,7 +100,47 @@
 
     </dl>
 </div>
+<!-- Ventana Modal AJAX -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="titulo"></h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body" id="body">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="form-actions no-color">
+    <button type="button" runat="server" class="btn btn-info" OnClick="AportacionesIMSS();" data-toggle="modal" data-target="#myModal">IMSS</button>
+    <button type="button" runat="server" class="btn btn-info" OnClick="TablaISR();" data-toggle="modal" data-target="#myModal">ISR</button>
+</div>
+<script type="text/javascript">
+    function funExitosa(response) {
+        $("#body").html(response);
+        $("#myModal").modal("show");
+    }
+    function AportacionesIMSS() {
+        var id = $("#idAlumno").text();
+        var url = "/Alumno/AportacionesIMSS/" + id;
+        LLamaAJAXGet(url, funExitosa);
+
+    }
+    function TablaISR() {
+        var id = $("#idAlumno").text();
+        var url = "/Alumno/_TablaISR/" + id;
+        LLamaAJAXGet(url, funExitosa);
+    }
+</script>
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.idAlumnos }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
